fixed hero behind contact

--- a/src/App.scss
+++ b/src/App.scss
@@ -114,7 +114,6 @@ $border-radius: 3px;
     color: $orange-light;
 }
 
-
 .card {
     background-color: white;
     border-bottom: 4px solid #add8e6;
@@ -168,6 +167,18 @@ $border-radius: 3px;
 .has-img-background {
     background-image: url('./assets/hero-image.jpg');
     background-size: cover;
+    position: relative;
+    &::after {
+        background-color: $green;
+        content: '';
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        opacity: 0.7;
+        z-index: 1;
+        top: 0;
+        left: 0;
+    }
 }
 
 .no-margin-bot {
